--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <span>shtirlizc@gmail.com</span>
-        <span>+7 (917) 402-24-24</span>
+        <a class="header-email" href="mailto:shtirlizc@gmail.com"
+          >shtirlizc@gmail.com</a
+        >
+        <a class="header-phone" href="tel:+79174022424">+7 (917) 402-24-24</a>
       </div>
     </header>
 
@@ -28,10 +30,18 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img
+            src="files/marat-sarvarov.jpg"
+            width="640"
+            alt="Фотография Сарварова Марата"
+          />
+        </figure>
         <h3>Пара слов о себе</h3>
         <p>
-          Верстка - это внимание в деталям. Выполняю работу до конца, с
-          возможностью позже легко поддерживать и расширять проект.
+          Верстка - это внимание в деталям.<br />
+          Качественное выполняю работу, с перспективой поддерживать и
+          масштабируемости кода.
         </p>
         <h3>Чем могу быть полезен</h3>
         <p>Крепкое знание верстки и основ JavaScript.</p>
@@ -42,18 +52,26 @@
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
 
+        <figure class="project-image">
+          <img
+            src="files/project.jpg"
+            width="928"
+            height="536"
+            alt="Cайт инструктора Кекса"
+          />
+        </figure>
         <h3>Сайт инструктора Кекса</h3>
         <p>Небольшой лендинг о школе для начинающих.</p>
-
-        <h3>Блог начинающего верстальщика</h3>
-        <p>Статический блог про обучение HTML и CSS.</p>
+        <a class="button" href="source/project/index.html">Открыть страницу</a>
       </div>
     </section>
 
     <footer class="page-footer">
       <div class="container">
-        <span>shtirlizc@gmail.com</span>
-        <span>+7 (917) 402-24-24</span>
+        <a class="footer-email" href="mailto:shtirlizc@gmail.com"
+          >shtirlizc@gmail.com</a
+        >
+        <a class="footer-phone" href="tel:+79174022424">+7 (917) 402-24-24</a>
       </div>
     </footer>
   </body>
