add skills and dark theme

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Портфолио Junior верстальщика</title>
+    <title>Портфолио верстальщика</title>
   </head>
 
   <body>
@@ -45,6 +45,15 @@
         </p>
         <h3>Чем могу быть полезен</h3>
         <p>Крепкое знание верстки и основ JavaScript.</p>
+        <div class="skills">
+          <h3>Мои навыки</h3>
+          <dl class="skills-list">
+            <dt class="skill-html">HTML</dt>
+            <dd class="level"><div style="width: 85%;">80%</div></dd>
+            <dt class="skill-css">CSS</dt>
+            <dd class="level"><div style="width: 80%;">80%</div></dd>
+          </dl>
+        </div>
       </div>
     </section>
 
